--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <!-- Feel free to change this text here -->
 
     <p>Fork me? Fork you, @octocatz!</p>
+    <p>Version 2</p>
   </body>
 </html>
